# propertyMarket

./: LICENSE  README.md
suburb_profile/: README.md  pyproject.toml
suburb_profile/src/devlog/: 2025-12-10.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-14.md  2025-12-15.md  2025-12-16.md
suburb_profile/src/suburb_profile/: __init__.py  clean_postcode.py  curtin_2605_full_property_data.json  get_domain_profile.py  get_postcode.py  get_real_profile.py  get_suburbs.py  output_domain_0_99.csv  postcode_raw.csv  url_real_estate.csv  url_suburbs.csv
