[project]
name = "suburb-profile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tien Nguyen", email = "tien.nguyen.bio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "uv-build>=0.9.17,<0.10.0",
]
